syntax = "proto3";

package com.jftse.proto.auth;
option java_multiple_files = true;
option java_generate_equals_and_hash = true;
option java_package = "com.jftse.proto.auth";

message TransitionRequest {
  int64 accountId = 1;
}

message TransitionResponse {
  bool success = 1;
}

service TransitionService {
  rpc NotifyTransition (TransitionRequest) returns (TransitionResponse);
}
